hphp/hack/test/typecheck/abstract_typeconsts/multiple-definitions/interface_require_extends_require_extends.php.exp
ERROR: File "interface_require_extends_require_extends.php", line 28, characters 28-39:
Invalid type hint (Typing[4090])
  File "interface_require_extends_require_extends.php", line 28, characters 38-39:
  No type constant `T2` in `UpperBound1`
  File "interface_require_extends_require_extends.php", line 3, characters 11-21:
  Declaration of `UpperBound1` is here
